...
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/article_subheading"
        tools:text="@string/item_description_holder"
        />

    <Button
        android:id="@+id/action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_text"
        android:text="@string/order"
        android:textColor="?attr/colorPrimary"
        style="?android:attr/borderlessButtonStyle"
        />

    <ImageButton
        android:id="@+id/directions_button"
        android:layout_width="@dimen/cards_button_width"
        android:layout_height="@dimen/cards_button_height"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/card_text"
        android:layout_marginRight="@dimen/md_keylines"
        android:tint="@color/button_grey"
...
